# imp-act

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  Q_learning.ipynb  README.md  conda_environment.yaml  create_highway_network.ipynb  create_sample_network.py  edgetest.ipynb  environment.py  environment_corr.py  environment_presets.py  evaluation.py  germany.graphml  jax_env_wrapper.py  jax_environment.py  jax_vs_numpy.py  jax_wrapper_vs_numpy.py  mytest.ipynb  mytest.py  mytest2.ipynb  myutils.py  optimal_mdp_solution.ipynb  params.py  plotter.py  print_episode.py  pyproject.toml  requirements.txt  rookie_jax.ipynb  rookie_jax.py  rookie_jax_static.py  sandbox.ipynb  setup.cfg  setup.py  shock.py  shock_doc.docx  test.py  test_environment.py  (+7 more)
docs/: README.md  conf.py  index.rst  notes.md  outline.md
docs/source/: conf.py  index.md  index.rst
docs/source/baselines/: RL_agents.md
docs/source/challenge/: rules_and_prizes.md
docs/source/environment/: concept.md  software.md
docs/source/getting_started/: installation.md  installation.rst  quickstart.md
docs/source/tutorials/: epymarl.md  epymarl.rst  heuristic.md  heuristic.rst
environments/: __init__.py  jax_environment.py  print_episode.py  print_jax_episode.py  road_env.py  shock.py  utils_nx_ig.py  visualization.py
environments/config/: environment_loader.py  small_environment_dict.yaml  smallest_environment_dict.yaml
environments/config/environment_presets/: large_environment.yaml  shock.yaml  small_environment.yaml  toy_environment.yaml
environments/graph/: README.md  create_large_graph.py
environments/graph/data/: README.md
imp_act/: __init__.py
imp_act/environments/: README.md  __init__.py  environment_loader.py  jax_environment.py  numpy_environment.py  print_episode.py  recorder.py  registry.py  road_env.py  rollout_plotter.py  visualization.py
imp_act/environments/config/: environment_loader.py
imp_act/environments/dev/: README.md  compute_reward_factor.py  create_budget_scenarios.py  create_budget_scenarios_config.yaml  create_large_graph.py  create_large_graph_config.yaml  environments_summary.ipynb  fix_traffic_paths.py  run_all_countries.sh  sandbox.ipynb  sandbox.py  sandbox_transport_nets.ipynb  validate_large_graph.py
imp_act/environments/graph/: create_large_graph.py
imp_act/policies/: evaluation.py  heuristics.py
imp_act/policies/example_notebooks/: tune.ipynb  (+4 more)
imp_rl_challenge/: __init__.py
imp_rl_challenge/environments/: __init__.py  print_episode.py  registry.py  road_env.py  visualization.py
imp_rl_challenge/policies/: Q_learner.py  agent.py
imp_rl_challenge/wrappers/: joint_MPD_env.py
policies/: Q_learner.py  agent.py  dp_policies.py  heuristics.py  test_policies.py  trivial_baselines.ipynb  tune_heuristic.ipynb
policies/example_notebooks/: Q_learning.ipynb
profiling/: README.md  jax_profile_example.py  jax_profile_road_env.py  jax_vs_numpy.py  jax_wrapper_vs_numpy.py
requirements/: requirements.txt
tests/: conftest.py  test_environment.py  test_jax_environment.py  test_policies.py
wrappers/: jax_env_wrapper.py  joint_MPD_env.py
(+350 files in other folders)
